--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|robots\.txt|css|js|img)
+RewriteCond $1 !^(index\.php|images|robots\.txt|css|js|img|uploads)
 RewriteRule ^(.*)$ /index.php?/$1 [L]
-RewriteCond $1 (css|js|img)
+RewriteCond $1 (css|js|img|uploads)
 RewriteRule ^(.*)$ /assets/$1 [L]
